src/core-crm/objects/Opportunity_Outcome_Code_Auto_Number__c/Opportunity_Outcome_Code_Auto_Number__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting contains the auto-numbers used for the Opportunity Outcome object&apos;s Code field.</description>
    <label>Opportunity Outcome Code Auto Number</label>
</CustomObject>