src/core-crm/objects/Opportunity_Outcome_Code_Auto_Number__c/fields/IPU_Project__c.field-meta.xml
<CustomField>
    <fullName>IPU_Project__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Auto-number used for IPU Project Opportunity Outcome records.</description>
    <label>IPU Project</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>