src/core-crm/objects/Opportunity_Outcome_Code_Auto_Number__c/fields/Research_Partnership_Project__c.field-meta.xml
<CustomField>
    <fullName>Research_Partnership_Project__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Auto-number used for Research Partnership Project Opportunity Outcome records.</description>
    <label>Research Partnership Project</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>