src/core-crm/objects/Opportunity_Outcome_Code_Auto_Number__c/fields/Start_Up__c.field-meta.xml
<CustomField>
    <fullName>Start_Up__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Auto-number used for Start-Up Opportunity Outcome records.</description>
    <label>Start-Up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>